--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,29 @@
     <artifactId>kds-logs-aggregation</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <properties>
+        <scala.version>2.10.4</scala.version>
+        <flink.version>1.1.3</flink.version>
+        <flink-connector-kafka.version>1.1.4</flink-connector-kafka.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-scala_2.10</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.10</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka-0.8_2.10</artifactId>
+            <version>${flink-connector-kafka.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
