--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,18 @@
     <properties>
         <scala.version>2.10.4</scala.version>
         <flink.version>1.1.3</flink.version>
-        <flink-connector-kafka.version>1.1.4</flink-connector-kafka.version>
+        <flink-connector-kafka.version>1.1.3</flink-connector-kafka.version>
+        <flink-connector-elasticsearch.version>1.1.3</flink-connector-elasticsearch.version>
     </properties>
+
+    <developers>
+        <developer>
+            <name>Iván Rozas Briñón</name>
+            <email>irozas@keedio.org</email>
+            <organization>Keedio</organization>
+            <organizationUrl>http://www.keedio.com</organizationUrl>
+        </developer>
+    </developers>
 
     <dependencies>
         <dependency>
@@ -30,6 +40,12 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka-0.8_2.10</artifactId>
             <version>${flink-connector-kafka.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-elasticsearch_2.10</artifactId>
+            <version>${flink-connector-elasticsearch.version}</version>
         </dependency>
     </dependencies>
 
