--- a/src/main/resources/logsAggregation.properties
+++ b/src/main/resources/logsAggregation.properties
@@ -1,6 +1,11 @@
 ### kafka
 kafka.broker.list=localhost:9092
 kafka.topic.list=kafkatopic
-
 ### zookeeper
 zookeeper.server.list=localhost:2181
+zookeeper.group.id=test
+### elasticSearch
+elasticSearch.cluster.name=elasticsearch
+elasticSearch.bulk.flush.max.actions=1
+elasticSearch.host.name=localhost
+elasticSearch.port=9300
