se genera correctamente el JSON que se inserta en elasticSearch

--- a/src/main/resources/logsAggregation.properties
+++ b/src/main/resources/logsAggregation.properties
@@ -1,6 +1,7 @@
 ### kafka
 kafka.broker.list=localhost:9092
-kafka.topic.list=kafkatopic
+kafka.topic.list=kafkatopicnew
+kafka.auto.offset.reset=largest
 ### zookeeper
 zookeeper.server.list=localhost:2181
 zookeeper.group.id=test
