--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <flink.version>1.1.3</flink.version>
         <flink-connector-kafka.version>1.1.3</flink-connector-kafka.version>
         <flink-connector-elasticsearch.version>1.1.3</flink-connector-elasticsearch.version>
+        <jackson-core.version>2.8.7</jackson-core.version>
+        <jackson-module-scala_2.10.version>2.8.7</jackson-module-scala_2.10.version>
     </properties>
 
     <developers>
@@ -46,6 +48,17 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-elasticsearch_2.10</artifactId>
             <version>${flink-connector-elasticsearch.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-scala_2.10</artifactId>
+            <version>${jackson-module-scala_2.10.version}</version>
         </dependency>
     </dependencies>
 
