genera un JSON, pero ahora del evento de kafka le llega un JSON, no un PatternLayout

--- a/src/main/resources/logsAggregation.properties
+++ b/src/main/resources/logsAggregation.properties
@@ -1,6 +1,6 @@
 ### kafka
 kafka.broker.list=localhost:9092
-kafka.topic.list=kafkatopicnew5,kafkatopicnew6
+kafka.topic.list=kafkatopicnew5
 kafka.auto.offset.reset=largest
 ### zookeeper
 zookeeper.server.list=localhost:2181
