Cambio para que obtenga de kafka un JSON y no una linea parseada. Con datetime y timezone

--- a/src/main/resources/logsAggregation.properties
+++ b/src/main/resources/logsAggregation.properties
@@ -11,3 +11,15 @@ elasticSearch.cluster.name=elasticsearch
 elasticSearch.host.name=localhost
 elasticSearch.port=9300
 elasticSearch.index.name=kdslogs
+### Nombres campod JSON origen
+json.origen.threadName=threadName
+json.origen.locationInfo=locationInfo
+json.origen.message=message
+json.origen.timeStamp=timeStamp
+json.origen.level=level
+json.origen.throwableInfo=throwableInfo
+json.origen.className=className
+json.origen.fullInfo=fullInfo
+json.origen.throwableStrRep=throwableStrRep
+json.fin.pattern.datetimezone=yyyy-MM-dd HH:mm:ss.SSS Z
+
