Inserta en ElasticSearch el nuevo pojo

--- a/src/main/resources/logsAggregation.properties
+++ b/src/main/resources/logsAggregation.properties
@@ -1,6 +1,6 @@
 ### kafka
 kafka.broker.list=localhost:9092
-kafka.topic.list=kafkatopicnew5
+kafka.topic.list=zookeeper
 kafka.auto.offset.reset=largest
 ### zookeeper
 zookeeper.server.list=localhost:2181
@@ -12,6 +12,7 @@ elasticSearch.host.name=localhost
 elasticSearch.port=9300
 elasticSearch.index.name=kdslogs
 ### Nombres campod JSON origen
+json.origen.event=event
 json.origen.threadName=threadName
 json.origen.locationInfo=locationInfo
 json.origen.message=message
@@ -21,5 +22,7 @@ json.origen.throwableInfo=throwableInfo
 json.origen.className=className
 json.origen.fullInfo=fullInfo
 json.origen.throwableStrRep=throwableStrRep
+json.origen.hostName=hostName
+json.origen.topic=topic
 json.fin.pattern.datetimezone=yyyy-MM-dd HH:mm:ss.SSS Z
 
