Si no le llega por parametro la ruta del fichero de properties coge la local

--- a/src/main/resources/logsAggregation.properties
+++ b/src/main/resources/logsAggregation.properties
@@ -11,7 +11,7 @@ elasticSearch.cluster.name=elasticsearch
 elasticSearch.host.name=localhost
 elasticSearch.port=9300
 elasticSearch.index.name=kdslogs
-### Nombres campod JSON origen
+### Nombres nodos JSON origen
 json.origen.event=event
 json.origen.threadName=threadName
 json.origen.locationInfo=locationInfo
